[package]
name = "cow"
version = "0.1.0"
authors = ["betta <betta0801@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
crc = "1.4.0"
futures = "0.1.3"
hyper = "0.12.35"
hyper-reverse-proxy = "0.4"
regex = "1"
lazy_static = "1.4.0"
libc = "0.2.20"
num_cpus = "1.2.1"
net2 = "0.2.26"
derive_more = "0.15.0"
serde_derive = "1.0.94"
serde = "1.0.101"
tokio-core = "0.1.4"
mime = "0.3.13"
http = "0.1.17"
percent-encoding = "2.0.0"
config = "0.9"

[dev-dependencies]
reqwest = "0.2.0"
tempdir = "0.3.5"

[[bin]]
name = "cow"
path = "src/main.rs"
