[package]
name = "cow"
version = "0.1.0"
authors = ["betta <betta0801@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
futures = "0.1.3"
hyper = "0.12.35"
regex = "1"
lazy_static = "1.4.0"
derive_more = "0.15.0"
serde_derive = "1.0.94"
serde = "1.0.101"
tokio-core = "0.1.4"
mime = "0.3.13"
http = "0.1.17"
percent-encoding = "2.0.0"
config = "0.9"
unicase = "2.3"
log = "0.4"
pretty_env_logger = "0.3"

[[bin]]
name = "cow"
path = "src/main.rs"
